# typeclass

./: .gitignore  README.md  pyproject.toml
src/typeclass/: __init__.py  typeclass.py
