[tool.poetry]
name = "typeclass"
version = "0.1.0"
description = "A small Python package that adds typeclasses"
authors = ["Binyamin Y Cohen <binyamincohen555@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
extype = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
